--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox Product Card Challenge - ANSWER KEY</title>
-    <link rel="stylesheet" href="answer-key-styles.css">
+    <link rel="stylesheet" href="answer-key-style.css">
 </head>
 <body>
     <div class="instructions">
